<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_check_in">Check In</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_hours">Add Hours</string>
    <string name="add_media">Add Photo or Video</string>
    <string name="add_menu_url">Add Menu Url</string>
    <string name="add_phone">Add Phone</string>
    <string name="add_review">Add Review</string>
    <string name="add_tip">Add Tip</string>
    <string name="add_website">Add Website</string>
    <string name="address">Address</string>
    <string name="address_and_map_location">Address and Map Location</string>
    <string name="announcements">Announcements</string>
    <string name="announcements_description">"Get notified about what's going on around you and what's new at Yelp"</string>
    <string name="business_name">Business Name</string>
    <string name="call">Call</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="check_in_likes_and_comments">Check-In Likes &amp; Comments</string>
    <string name="compliment_notification_description">Get notified when someone sends you a compliment</string>
    <string name="compliments">Compliments</string>
    <string name="delete_review">Delete Review</string>
    <string name="distance_units">Distance Units</string>
    <string name="duplicate_business">Duplicate business page?</string>
    <string name="edit_business">Edit Business</string>
    <string name="edit_review">Edit Review</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_share_description">Connect your Yelp account to Facebook</string>
    <string name="friend_check_ins">Friend Check-Ins</string>
    <string name="get_notified_when">Get notified when:</string>
    <string name="get_notified_when_your_friends_check_in">Get notified when your friends check in</string>
    <string name="hours">Hours</string>
    <string name="it_contains_false_information">It contains false information</string>
    <string name="it_contains_promotional_material">It contains promotional material</string>
    <string name="it_contains_threats_or_lewdness">It contains threats, lewdness or hate speech</string>
    <string name="it_doesnt_describe_a_personal_consumer_experience">"It doesn't describe a personal consumer experience"</string>
    <string name="it_violates_yelps_privacy_standards">"It violates Yelp's privacy standards"</string>
    <string name="it_was_posted_by_competitor">It was posted by a competitor or ex-employee</string>
    <string name="it_was_posted_by_someone_affiliated">It was posted by someone affiliated with the business</string>
    <string name="its_for_the_wrong_business">"It's for the wrong business"</string>
    <string name="light_notify">Notification Light</string>
    <string name="light_notify_description">Blink light upon incoming notification</string>
    <string name="log_out">Log Out</string>
    <string name="menu_url">Menu Url</string>
    <string name="message_preview">Message Preview</string>
    <string name="messages">Messages</string>
    <string name="messages_preview_text_subtitle">Show preview text in notification when someone sends you a message</string>
    <string name="messages_push_notifications_subtitle">Get notified when someone sends you a message</string>
    <string name="name">Name</string>
    <string name="nav_business">View Business</string>
    <string name="nav_settings">Settings</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
    <string name="notes_for_the_yelp_team">Notes for the Yelp Team</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Receive push notifications for different Yelp events</string>
    <string name="notifications_from">Get Notifications From</string>
    <string name="optional_information">Optional Information</string>
    <string name="permanently_closed_question">Permanently Closed?</string>
    <string name="phone">Phone</string>
    <string name="photo_and_video_likes">Photo &amp; Video Likes</string>
    <string name="photo_and_video_likes_description">Get notified when people like your photos and videos</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="read_before_reporting">Read before reporting</string>
    <string name="refresh">Refresh</string>
    <string name="report_review">Report Review</string>
    <string name="required_information">Required Information</string>
    <string name="save_business">Save Business to Contacts</string>
    <string name="settings_notifications_all">All the time</string>
    <string name="settings_notifications_cities_mine">Only Friends In My City</string>
    <string name="share">Share</string>
    <string name="sign_up">Sign Up</string>
    <string name="someone_comments_on_a_check_in_already_commented_on">"Someone comments on a check-in you've already commented on"</string>
    <string name="someone_comments_on_your_check_ins">Someone comments on your check-ins</string>
    <string name="someone_likes_your_check_ins">Someone likes your check-ins</string>
    <string name="talk_location">Talk Location</string>
    <string name="tip_likes">Tip Likes</string>
    <string name="tip_likes_description">Get notified when someone likes your tips</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_share_description">Connect your Yelp account to Twitter</string>
    <string name="vibrate_notify">Vibrate</string>
    <string name="vibrate_notify_description">Vibrate upon incoming notification</string>
    <string name="website">Website</string>
    <string name="whats_the_problem">"What's the problem?"</string>
    <string name="when">When:</string>
    <string name="write_an_update">Write an Update</string>
    <string name="yes">Yes</string>
    <string name="key_announcements">Announcements</string>
    <string name="key_check_in_likes">key_check_in_likes</string>
    <string name="key_check_in_notifications">fake_key_for_dependency_check_in_notifications</string>
    <string name="key_comments_on_check_ins_I_own">key_comments_on_check_ins_I_own</string>
    <string name="key_comments_on_threads">key_comments_on_threads</string>
    <string name="key_compliments_notify">Compliment Notifications</string>
    <string name="key_facebook_share">share.facebook</string>
    <string name="key_light_notify">Notification Light</string>
    <string name="key_messages_preview_text">Preview Text Setting</string>
    <string name="key_messages_push_notifications">Push Notification</string>
    <string name="key_photo_notify">key_photo_notify</string>
    <string name="key_share_awards">share.awards</string>
    <string name="key_tips_notify">Quick Tip Notifications</string>
    <string name="key_twitter_share">share.twitter</string>
    <string name="key_vibrate_notify">Vibrate</string>
</resources>