<?xml version="1.0" encoding="utf-8"?>
<merge yelp:preferenceTitleText="@string/notifications"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yelp="http://schemas.android.com/apk/res-auto">
    <com.yelp.android.ui.activities.settings.PreferenceView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/friend_check_ins" yelp:preferenceScreenReference="@layout/preferences_friend_check_ins" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/check_in_likes_and_comments" yelp:preferenceScreenReference="@layout/preferences_check_in_likes_and_comments" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/tip_likes" yelp:preferenceSubtitleText="@string/tip_likes_description" yelp:preferenceKey="@string/key_tips_notify" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/photo_and_video_likes" yelp:preferenceSubtitleText="@string/photo_and_video_likes_description" yelp:preferenceKey="@string/key_photo_notify" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/compliments" yelp:preferenceSubtitleText="@string/compliment_notification_description" yelp:preferenceKey="@string/key_compliments_notify" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/messages" yelp:preferenceSubtitleText="@string/messages_push_notifications_subtitle" yelp:preferenceKey="@string/key_messages_push_notifications" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/message_preview" yelp:preferenceSubtitleText="@string/messages_preview_text_subtitle" yelp:preferenceKey="@string/key_messages_preview_text" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/vibrate_notify" yelp:preferenceSubtitleText="@string/vibrate_notify_description" yelp:preferenceKey="@string/key_vibrate_notify" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/light_notify" yelp:preferenceSubtitleText="@string/light_notify_description" yelp:preferenceKey="@string/key_light_notify" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceToggleView android:id="@id/announcements_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/announcements" yelp:preferenceSubtitleText="@string/announcements_description" yelp:preferenceKey="@string/key_announcements" yelp:preferenceRequireLogin="true" />
</merge>