<?xml version="1.0" encoding="utf-8"?>
<merge yelp:preferenceTitleText="@string/nav_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yelp="http://schemas.android.com/apk/res-auto">
    <com.yelp.android.ui.activities.settings.PreferenceView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/notifications" yelp:preferenceSubtitleText="@string/notifications_description" yelp:preferenceScreenReference="@layout/preferences_notification" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/share_to_facebook_and_twitter" yelp:preferenceSubtitleText="@string/connect_your_account_to_share" yelp:preferenceScreenReference="@layout/preferences_share_settings" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:id="@id/talk_location" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/talk_location" yelp:preferenceScreenReference="@layout/preferences_talk_location" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:id="@id/clear_history" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/clear_history_and_saved_searches" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:id="@id/distance_units" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/distance_units" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:id="@id/privacy_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/privacy_settings" yelp:preferenceRequireLogin="true" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:id="@id/login_logout" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/log_out" />
    <com.yelp.android.ui.activities.settings.PreferenceView android:id="@id/sign_up" android:layout_width="fill_parent" android:layout_height="wrap_content" yelp:preferenceTitleText="@string/sign_up" yelp:preferenceRequireLogout="true" />
</merge>